Use String.format instead of formatted() for API 30 Android runtime
Co-authored-by: Sargun Vohra <sargunv@users.noreply.github.com>